[project]
name = "time-series-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.3",
    "datetime>=5.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scipy>=1.16.1",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "cython>=3.1.3",
    "numpy>=2.3.2",
]
