[project]
name = "time-series-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7, <=3.12"
dependencies = [
    "cython>=3.0.12",
    "datetime>=5.5",
    "ipykernel>=6.16.2",
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "pmdarima>=2.0.4",
    "prophet>=1.1.7",
    "scipy>=1.7.3",
    "statsmodels>=0.13.5",
]
